[gd_scene load_steps=38 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://sprites/Fullscreens-10.png.png" type="Texture" id=2]
[ext_resource path="res://sprites/Fullscreens-2.png.png" type="Texture" id=3]
[ext_resource path="res://sprites/text.png" type="Texture" id=4]
[ext_resource path="res://Arrow.gd" type="Script" id=5]
[ext_resource path="res://SongSelector.gd" type="Script" id=6]
[ext_resource path="res://sprites/Fullscreens-6.png.png" type="Texture" id=7]
[ext_resource path="res://sprites/Fullscreens-7.png.png" type="Texture" id=8]
[ext_resource path="res://sprites/Fullscreens-8.png.png" type="Texture" id=9]
[ext_resource path="res://sprites/Fullscreens-4.png.png" type="Texture" id=10]
[ext_resource path="res://SongSampler.gd" type="Script" id=11]
[ext_resource path="res://InputMap.gd" type="Script" id=12]
[ext_resource path="res://InputMapItem.gd" type="Script" id=13]
[ext_resource path="res://sprites/Letters.png" type="Texture" id=14]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 300, 100 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 100, 300, 100 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 400, 300, 100 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 300, 300, 100 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 300, 300, 100 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 300, 300, 100 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 64.5, 0.5, 31, 31 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 128, 32, 32 )

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="TitleBG" type="Sprite" parent="."]
position = Vector2( 300, 256 )
texture = ExtResource( 2 )

[node name="SettingsBG" type="Sprite" parent="."]
visible = false
position = Vector2( 300, 256 )
texture = ExtResource( 3 )

[node name="PressEnterText" type="Sprite" parent="."]
position = Vector2( 300, 460 )
texture = SubResource( 1 )

[node name="PlaySongText" type="Sprite" parent="."]
visible = false
position = Vector2( 150, 460 )
texture = SubResource( 2 )

[node name="SettingsText" type="Sprite" parent="."]
visible = false
position = Vector2( 450, 464.392 )
texture = SubResource( 3 )

[node name="Arrow" type="Sprite" parent="."]
visible = false
position = Vector2( 328, 435 )
scale = Vector2( 0.25, 0.25 )
texture = SubResource( 4 )
script = ExtResource( 5 )

[node name="SettingsControlsText" type="RichTextLabel" parent="."]
visible = false
margin_left = 256.905
margin_top = 487.318
margin_right = 360.905
margin_bottom = 509.318
text = "Close: ENTER"
scroll_active = false

[node name="SettingsDescription" type="RichTextLabel" parent="."]
visible = false
margin_left = 79.4392
margin_top = 375.589
margin_right = 513.439
margin_bottom = 472.589
text = "Standard keyboards may not support holding down lots of keys at the same time. Expert+ mode requires a keyboard that can do this. All other modes can be played on any keyboard that can do TWO buttons at the same time."
scroll_active = false

[node name="VersionText" type="RichTextLabel" parent="."]
margin_left = 6.71002
margin_top = 491.448
margin_right = 97.71
margin_bottom = 516.448
text = "Version 0.2.1"
scroll_active = false

[node name="SongSelector" type="Node2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 300, 0 )
script = ExtResource( 6 )

[node name="EasyBG" type="Sprite" parent="SongSelector"]
position = Vector2( 0, 256 )
texture = ExtResource( 7 )

[node name="MediumBG" type="Sprite" parent="SongSelector"]
visible = false
position = Vector2( 0, 256 )
texture = ExtResource( 8 )

[node name="ExpertBG" type="Sprite" parent="SongSelector"]
visible = false
position = Vector2( 0, 256 )
texture = ExtResource( 9 )

[node name="ExpertPlusBG" type="Sprite" parent="SongSelector"]
visible = false
position = Vector2( 0, 256 )
texture = ExtResource( 10 )

[node name="SongArrow" type="Sprite" parent="SongSelector"]
position = Vector2( -50, 45 )
scale = Vector2( 0.25, 0.25 )
texture = SubResource( 5 )

[node name="ModeArrow" type="Sprite" parent="SongSelector"]
position = Vector2( -249.045, 111.126 )
scale = Vector2( 0.1, 0.1 )
texture = SubResource( 6 )

[node name="EasyText" type="RichTextLabel" parent="SongSelector"]
margin_left = -220.0
margin_top = 105.0
margin_right = -182.535
margin_bottom = 125.143
text = "EASY"
scroll_active = false

[node name="MediumText" type="RichTextLabel" parent="SongSelector"]
margin_left = -220.0
margin_top = 140.0
margin_right = -148.934
margin_bottom = 164.676
text = "MEDIUM"
scroll_active = false

[node name="ExpertText" type="RichTextLabel" parent="SongSelector"]
margin_left = -220.0
margin_top = 175.693
margin_right = -155.934
margin_bottom = 201.693
text = "EXPERT"

[node name="ExpertPlusText" type="RichTextLabel" parent="SongSelector"]
margin_left = -220.0
margin_top = 210.831
margin_right = -148.812
margin_bottom = 231.831
text = "EXPERT+"

[node name="SongSelectControlsText" type="RichTextLabel" parent="SongSelector"]
margin_left = -274.0
margin_top = 440.0
margin_right = -60.0
margin_bottom = 502.0
text = "Select Song:	Arrow UP/DOWN
Select Mode:   Arrow LEFT/RIGHT
Play Song:		ENTER
Back:			   BACKSPACE"
scroll_active = false

[node name="FolderNotFound" type="RichTextLabel" parent="SongSelector"]
visible = false
margin_left = -57.0
margin_top = 172.0
margin_right = 127.0
margin_bottom = 278.0
text = "Songs folder not found!

Make sure the folder is called \"songs\" and it is in the correct location"
scroll_active = false

[node name="SongSampler" type="AudioStreamPlayer" parent="SongSelector"]
script = ExtResource( 11 )

[node name="InputMap" type="Node2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 300, 256 )
script = ExtResource( 12 )

[node name="Lane0" type="Node2D" parent="InputMap"]
editor/display_folded = true
position = Vector2( -218.298, -16.6908 )
script = ExtResource( 13 )

[node name="Key" type="Sprite" parent="InputMap/Lane0"]
texture = SubResource( 7 )

[node name="Lane1" type="Node2D" parent="InputMap"]
editor/display_folded = true
position = Vector2( -158.124, -15.8124 )
script = ExtResource( 13 )

[node name="Key" type="Sprite" parent="InputMap/Lane1"]
texture = SubResource( 8 )

[node name="Lane2" type="Node2D" parent="InputMap"]
editor/display_folded = true
position = Vector2( -103.22, -15.3731 )
script = ExtResource( 13 )

[node name="Key" type="Sprite" parent="InputMap/Lane2"]
texture = SubResource( 9 )

[node name="Lane3" type="Node2D" parent="InputMap"]
editor/display_folded = true
position = Vector2( -50.0725, -14.4947 )
script = ExtResource( 13 )

[node name="Key" type="Sprite" parent="InputMap/Lane3"]
texture = SubResource( 10 )

[node name="Lane4" type="Node2D" parent="InputMap"]
editor/display_folded = true
position = Vector2( 65.4456, -14.0555 )
script = ExtResource( 13 )

[node name="Key" type="Sprite" parent="InputMap/Lane4"]
texture = SubResource( 11 )

[node name="Lane5" type="Node2D" parent="InputMap"]
editor/display_folded = true
position = Vector2( 115.957, -14.9339 )
script = ExtResource( 13 )

[node name="Key" type="Sprite" parent="InputMap/Lane5"]
texture = SubResource( 12 )

[node name="Lane6" type="Node2D" parent="InputMap"]
editor/display_folded = true
position = Vector2( 166.469, -15.3731 )
script = ExtResource( 13 )

[node name="Key" type="Sprite" parent="InputMap/Lane6"]
texture = SubResource( 13 )

[node name="Lane7" type="Node2D" parent="InputMap"]
editor/display_folded = true
position = Vector2( 213.467, -12.2985 )
script = ExtResource( 13 )

[node name="Key" type="Sprite" parent="InputMap/Lane7"]
texture = SubResource( 14 )

[node name="Lane8" type="Node2D" parent="InputMap"]
editor/display_folded = true
position = Vector2( -132.87, 84.1876 )
script = ExtResource( 13 )

[node name="Key1" type="Sprite" parent="InputMap/Lane8"]
position = Vector2( -54, 0 )
texture = SubResource( 15 )

[node name="Key2" type="Sprite" parent="InputMap/Lane8"]
position = Vector2( -18, 0 )
texture = SubResource( 16 )

[node name="Key3" type="Sprite" parent="InputMap/Lane8"]
position = Vector2( 18, 0 )
texture = SubResource( 17 )

[node name="Key4" type="Sprite" parent="InputMap/Lane8"]
position = Vector2( 54, 0 )
texture = SubResource( 18 )

[node name="Lane9" type="Node2D" parent="InputMap"]
editor/display_folded = true
position = Vector2( 135.766, 82.3 )
script = ExtResource( 13 )

[node name="Key1" type="Sprite" parent="InputMap/Lane9"]
position = Vector2( -72, 0 )
texture = SubResource( 19 )

[node name="Key2" type="Sprite" parent="InputMap/Lane9"]
position = Vector2( -36, 0 )
texture = SubResource( 20 )

[node name="Key3" type="Sprite" parent="InputMap/Lane9"]
texture = SubResource( 21 )

[node name="Key4" type="Sprite" parent="InputMap/Lane9"]
position = Vector2( 30, 0 )
texture = SubResource( 22 )

[node name="Key5" type="Sprite" parent="InputMap/Lane9"]
position = Vector2( 54, 0 )
texture = SubResource( 23 )
